# camlin_task

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  wallet.py
app/core/: exceptions.py  security.py
app/models/: utils.py
app/models/domain/: user.py  wallet.py
app/models/schemas/: auth.py  wallet.py
app/repositories/: base.py  wallet.py
app/services/: auth.py  exchange.py  wallet.py
scripts/: lint.sh  prestart.sh  run-tests.sh
tests/: conftest.py  test_api.py  test_services.py
